<resources>
    <string name="app_name">Shopping List</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="shopping_fragment_label">Shopping List</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="new_item">New Item</string>
    <string name="new_category">New Category</string>
    <string name="new_rule">New Rule</string>
    <string name="button_save">Save</string>
    <string name="category_fragment_label">Categories</string>
    <string name="rule_fragment_label">Rules</string>
    <string name="delete_completed">Delete Completed</string>
    <string name="uncategorized_items">Uncategorized</string>
    <string name="edit_item_head">Edit Item</string>
    <string name="category_tag">Category:</string>
    <string name="item_tag">Name:</string>
    <string name="new_category_text">New Category:</string>
    <string name="nothing_here_yet">Nothing in Here...\n Add some Shopping Items!</string>
</resources>
