<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textStyle="italic"
        android:text="@string/edit_item_head"
        android:layout_gravity="center"
        android:layout_marginTop="15dp" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:useDefaultMargins="true"
        android:layout_marginBottom="15dp">

        <TextView
            android:text="@string/item_tag"
            android:layout_row="0"
            android:layout_column="0" />

        <EditText
            android:id="@+id/item_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:textColor="@color/colorPrimary"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:layout_row="0"
            android:layout_column="1" />

        <TextView
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/category_tag" />

        <Spinner
            android:id="@+id/category_spinner"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="right" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/button_save"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_gravity="right"/>

    </GridLayout>


</LinearLayout>